--- a/app/globals.css
+++ b/app/globals.css
@@ -2,20 +2,53 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@layer base {
+  * {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+  }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+  h1 {
+    @apply text-3xl md:text-4xl font-bold md:leading-[43.57px];
+  }
+
+  p {
+    @apply text-base leading-[25px];
   }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+@layer utilities {
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+  }
+
+  .myShadow {
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.074);
+  }
+
+  .btn {
+    @apply bg-primary w-full h-[48px] text-white font-medium rounded-lg transition-all duration-300 hover:scale-105;
+  }
+
+  .input {
+    @apply rounded-lg border-[0.3px] border-gray-200 focus:outline-0 focus:border-primary w-full p-3 text-base placeholder:text-myGray placeholder:text-sm;
+  }
+
+  .adminContainer {
+    @apply py-10 pl-[3%] pr-[5%];
+  }
+
+  .myFlex {
+    @apply flex items-center;
+  }
 }
