--- a/app/globals.css
+++ b/app/globals.css
@@ -37,7 +37,7 @@
   }
 
   .btn {
-    @apply bg-primary w-full h-[48px] text-white font-medium rounded-lg transition-all duration-300 hover:scale-105;
+    @apply bg-primary w-full h-[48px] text-white font-medium rounded-lg transition-all duration-300 hover:scale-[1.01];
   }
 
   .input {
