--- a/app/globals.css
+++ b/app/globals.css
@@ -19,6 +19,12 @@
 }
 
 @layer utilities {
+  input:-webkit-autofill {
+    background-color: transparent !important;
+    box-shadow: 0 0 0px 1000px white inset !important;
+    color: #000 !important;
+  }
+
   /* Hide scrollbar for Chrome, Safari and Opera */
   .no-scrollbar::-webkit-scrollbar {
     display: none;
